# kinova

./: CMakeLists.txt  LICENSE  README.md  requirements.txt
config/: robot_config.json
include/: config_reader.h  redis_client.h  redis_keys.hpp  utilities.h
models/: gen3_robotiq_2f_85.urdf
src/: config_reader.py  ik_solver.py  kinova_controller.py  kinova_driver.cpp  timing_utils.py  utilities.cpp  utilities.py
